--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     implementation "net.dv8tion:JDA:4.2.1_253"
     implementation "com.sedmelluq:lavaplayer:1.3.77"
     implementation "com.github.kevinsawicki:http-request:6.0"
-    implementation "com.googlecode.json-simple:json-simple:1.1.1"
+    implementation 'com.google.code.gson:gson:2.8.7'
 }
 
 shadowJar {
