--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation "net.dv8tion:JDA:4.2.1_253"
     implementation "com.sedmelluq:lavaplayer:1.3.77"
     implementation "com.github.kevinsawicki:http-request:6.0"
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation "com.google.code.gson:gson:2.8.8"
+    implementation "com.google.zxing:core:3.4.1"
+    implementation "com.google.zxing:javase:3.4.1"
 }
 
 shadowJar {
