--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,14 @@ repositories {
         name 'm2-dv8tion'
         url 'https://m2.dv8tion.net/releases'
     }
+
 }
 
 dependencies {
     implementation "net.dv8tion:JDA:4.3.0_277"
     implementation "com.sedmelluq:lavaplayer:1.3.77"
     implementation "com.github.kevinsawicki:http-request:6.0"
-    implementation "com.google.code.gson:gson:2.8.8"
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation "com.google.zxing:core:3.4.1"
     implementation "com.google.zxing:javase:3.4.1"
 }
