--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,19 @@ repositories {
         name 'm2-dv8tion'
         url 'https://m2.dv8tion.net/releases'
     }
+    maven {
+        url 'https://jitpack.io'
+    }
 }
 
 dependencies {
     implementation "net.dv8tion:JDA:4.3.0_277"
-    implementation "com.sedmelluq:lavaplayer:1.3.77"
-    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation "com.github.walkyst:lavaplayer-fork:1.3.97"
+    implementation 'com.google.code.gson:gson:2.9.0'
     implementation "com.google.zxing:core:3.4.1"
     implementation "com.google.zxing:javase:3.4.1"
-    implementation 'org.slf4j:slf4j-api:1.7.35'
-    implementation 'org.slf4j:slf4j-simple:1.7.35'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
+    implementation 'org.slf4j:slf4j-simple:1.7.36'
 }
 
 jar {
