--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,11 @@ plugins {
 }
 
 group 'at.lost_inc'
-version '1.6.0'
+/*
+   Major Minor Snapshot
+       \   |    /
+        \  |  /   */
+version '1.7.0'
 
 repositories {
     mavenCentral()
